--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "axios": "^1.13.2",
     "gsap": "^3.14.1",
     "lucide-react": "^0.559.0",
     "next": "16.0.7",
